--- a/index.html
+++ b/index.html
@@ -3,40 +3,43 @@
 	<head>
 		<meta name="author" content="Patrick Do"/>
 		<meta name="description" content="Lumbar spondylosis reporting module"/>
+		<meta name="keywords" content="lumbar spine, degenerative disease, radiology, reporting, module, spondylosis, neuroradiology, nomenclature, disc"/>
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=0.6"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<meta charset="utf-8"/>
 		
-		<!-- LSpine/REDIPS http://www.redips.net/javascript/drag-and-drop-example-3/ -->
+		<!-- LSpine/REDIPS: http://www.redips.net/javascript/drag-and-drop-example-3/ -->
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="js/redips-drag-min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 				
-		<!-- JQuery http://jquery.com/ -->
+		<!-- JQuery: http://jquery.com/ -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		
-		<!-- Multiple Select (JQuery) http://wenzhixin.net.cn/p/multiple-select/docs/ -->
+		<!-- Multiple Select (JQuery): http://wenzhixin.net.cn/p/multiple-select/docs/ -->
 		<link rel="stylesheet" href="css/multiple-select.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="js/jquery.multiple.select.js"></script>
 		
-		<!-- Colorbox (JQuery) http://www.jacklmoore.com/colorbox/ -->
+		<!-- Colorbox (JQuery): http://www.jacklmoore.com/colorbox/ -->
 		<link rel="stylesheet" href="css/colorbox.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="js/jquery.colorbox-min.js"></script>
 		
 		<!-- Initialization -->
 		<script type="text/javascript">
             $(document).ready(function() {
-                var a = "#o1 #o2 #o3 #o4 #o5".split(' ');	// identify the 5 multipleSelects
-				$('a.cb').colorbox({ opacity:0.5 });	// initialize colorbox for class "cb"
+                // Colorbox
+				var a = "#o1 #o2 #o3 #o4 #o5".split(' ');	// identify the 5 multipleSelects
+				$('a.cb').colorbox({ opacity:0.5 });		// initialize colorbox for class "cb"
 				
+				// Multiple Select
 				for (var i = 0; i < a.length; i++) {
-					$(a[i]).multipleSelect({	// initialize the 5 multipleSelects
+					$(a[i]).multipleSelect({		// initialize the 5 multipleSelects
 						multiple: true,
-						multipleWidth: 50,
-						width: 170,
+						multipleWidth: 50,			// width of each checkbox + label
+						width: 170,					// width of entire row
 						maxHeight: 280,
-						selectAll: false,
-						placeholder: "None",
-						minumimCountSelected: 99,	// [sic]
+						selectAll: false,			// "Select All" checkbox row
+						placeholder: "None",		// what to display when no options are selected
+						minumimCountSelected: 99,	// [sic] when to display "x of y selected"
 						onOptgroupClick: function(view) {
 							report_update();
 						},
@@ -49,7 +52,7 @@
 			});
         </script>
 		
-		<title>Lumbar Spondylosis</title>
+		<title>Lumbar Spondylosis Reporting Module</title>
 		
 		<!-- Google Analytics asynchronous -->
 		<script type="text/javascript"> 
