--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 		<script type="text/javascript">
             $(document).ready(function() {
                 // Colorbox
-				var a = "#o1 #o2 #o3 #o4 #o5".split(' ');	// identify the 5 multipleSelects
 				$('a.cb').colorbox({ opacity:0.5 });		// initialize colorbox for class "cb"
 				
 				// Multiple Select
+				var a = "#o1 #o2 #o3 #o4 #o5".split(' ');	// identify the 5 multipleSelects
 				for (var i = 0; i < a.length; i++) {
 					$(a[i]).multipleSelect({		// initialize the 5 multipleSelects
 						multiple: true,
@@ -68,13 +68,13 @@
 	
 	<body>
 	
-		<div style="float:right; font-size:small;text-align:right">
+		<div style="float:right; font-size:small; text-align:right">
 			<b>Nomenclature Guidelines:</b> 
 			<a href="http://www.asnr.org/spine_nomenclature/" target="_blank">2001 <img src="img/open_in_new_window.png" height="12" width="12" alt="2001 Combined Task Force Nomenclature Guidelines"></a> / <a href="http://www.sciencedirect.com/science/article/pii/S1529943014004094" target="_blank">2014 <img src="img/open_in_new_window.png" height="12" width="12" alt="2014 Combined Task Force Nomenclature Guidelines"></a>
 				<br>
 			<a href="instructions.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue">instructions</a>
 				<br>
-			<a href="quickref.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue;">quick reference</a>
+			<a href="quickref.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue">quick reference</a>
 		</div>
 		<div style="background-color:#eee; padding:20px; text-align:center; font-size:20px; font-weight:bold">
 			Lumbar Spondylosis
@@ -100,7 +100,7 @@
 							<tr><td class="single"><div id="moderate" class="drag clone o">Moderate</div></td></tr>
 							<tr><td class="single"><div id="moderate-severe" class="drag clone os">Moderate-<br>severe</div></td></tr>
 							<tr><td class="single"><div id="severe" class="drag clone s">Severe</div></td></tr>
-							<tr><td class="trash" title="Trash" style="color:white; text-transform:uppercase; font-weight:bold; background-color:#6386BD;">Trash</td></tr>
+							<tr><td class="trash" title="Trash" style="color:white; text-transform:uppercase; font-weight:bold; background-color:#6386BD">Trash</td></tr>
 						</tbody>
 					</table><!-- LEFT TABLE -->
 				</div><!-- left container -->
@@ -126,10 +126,10 @@
 						<tbody>
 							<tr>
 								<td class="mark blank trash" title="Apply severity to central and paracentral locations" >
-									<!-- if checked, clone severity to the central/paracentral  -->
-									<input id="entirelevel" type="checkbox"><label for="entirelevel">link</label>
+									<!-- if checked, clone severity to central/paracentral  -->
+									<input id="entirelevel" type="checkbox"><label for="entirelevel" style="font-variant:small-caps; font-size:medium">link</label>
 								</td>
-								<td class="mark dark trash" title="Broad-based disc bulge"><a>Broad-based</a><br>disc bulge</td>
+								<td class="mark dark trash" title="Broad-based disc bulge"><a>Broad-based<br>disc bulge</a></td>
 								<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br>narrowing</a></td>
 								<td class="mark dark trash" title="Right foraminal disc protrusion"><a>Right<br>foraminal</a></td>
 								<td class="mark dark trash" title="Right central disc protrusion"><a>Right<br>central</a></td>
@@ -137,8 +137,8 @@
 								<td class="mark dark trash" title="Left central disc protrusion"><a>Left<br>central</a></td>
 								<td class="mark dark trash" title="Left foraminal disc protrusion"><a>Left<br>foraminal</a></td>
 								<td class="mark dark trash" title="Left neuroforaminal narrowing"><a>Left NF<br>narrowing</a></td>
-								<td class="mark dark trash" title="Spinal canal stenosis">Spinal<br>stenosis</td>
-								<td class="mark dark trash" title="Other findings">Other<br>findings</td>
+								<td class="mark dark trash" title="Spinal canal stenosis"><a>Spinal<br>stenosis</a></td>
+								<td class="mark dark trash" title="Other findings"><a>Other<br>findings</a></td>
 							</tr>
 							<tr>
 								<td class="mark dark trash">L1-L2</td>
@@ -397,7 +397,7 @@
 							</tr>
 							<tr> <!-- 8/2/14 -->
 								<td colspan=3 class="mark blank trash"></td>
-								<td colspan=5 class="mark dark trash">location of disc protrusion</td>
+								<td colspan=5 class="mark dark trash" style="font-variant:small-caps; font-size:medium">location of disc protrusion</td>
 								<td colspan=3 class="mark blank trash"></td>
 							</tr>
 						</tbody>
@@ -412,19 +412,18 @@
 					An error has occurred.
 				</div>
 				<div style="padding-left:10px; clear:both">
-					<button style="width:150px; height:50px" id="report_transmitbtn" onclick="report_transmit()" type="button" >
+					<button style="width:150px; height:50px" id="report_transmitbtn" onclick="report_transmit()" type="button">
 						Select All
 					</button>
 					<button onclick="location.reload()" style="height:50px">
 						Reset
 					</button>
-					<input type="checkbox" id="conclusion" onclick="report_update()">
-						<label for="conclusion">Generate Conclusion</label>					
+					<input type="checkbox" id="conclusion" onclick="report_update()"><label for="conclusion">Generate Conclusion</label>					
 					<br>Ctrl+C to copy
 				</div>
 			</div><!-- PREVIEW PANE -->
 			
-			<div style="clear:both; padding-left:10px; font-size:x-small; padding-top:10px">
+			<div style="clear:both; padding-left:10px; font-size:x-small; padding-top:20px">
 				Patrick Do | 2014
 			</div>
 		</div><!-- main container -->
