refactor Reset button

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 								</button>
 							</td>
 							<td>
-								<button onclick="location.reload()" style="height:50px">
+								<button onclick="report_reset()" style="height:50px">
 								Reset
 								</button>
 							</td>
