update to pass W3C and HTMLHint validation

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 	
 		<div style="float:right; font-size:small; text-align:right">
 			<b>Nomenclature Guidelines:</b> 
-			<a href="http://www.asnr.org/spine_nomenclature/" target="_blank">2001 <img src="img/open_in_new_window.png" height="12" width="12" alt="2001 Combined Task Force Nomenclature Guidelines"></a> / <a href="http://www.sciencedirect.com/science/article/pii/S1529943014004094" target="_blank">2014 <img src="img/open_in_new_window.png" height="12" width="12" alt="2014 Combined Task Force Nomenclature Guidelines"></a>
-				<br>
+			<a href="http://www.asnr.org/spine_nomenclature/" target="_blank">2001 <img src="img/open_in_new_window.png" height="12" width="12" alt="2001 Combined Task Force Nomenclature Guidelines" /></a> / <a href="http://www.sciencedirect.com/science/article/pii/S1529943014004094" target="_blank">2014 <img src="img/open_in_new_window.png" height="12" width="12" alt="2014 Combined Task Force Nomenclature Guidelines" /></a>
+				<br />
 			<a href="instructions.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue">instructions</a>
-				<br>
+				<br />
 			<a href="quickref.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue">quick reference</a>
 		</div>
 		<div style="background-color:#eee; padding:20px; text-align:center; font-size:20px; font-weight:bold">
@@ -89,16 +89,16 @@
 				<div id="left">
 					<table id="table1"><!-- LEFT TABLE -->
 						<colgroup>
-							<col style="width:80px">
+							<col style="width:80px" />
 						</colgroup>
 						<tbody>
 						<!--	td class="dark" for overwritable
 								td class="single" for non-overwritable -->
 							<tr><td class="single"><div id="bl" class="drag clone bl"><input type="text" value="Minimal" style="width:60px; vertical-align:bottom; text-align:center" id="bl_text" onkeyup="report_update()" /></div></td></tr>
 							<tr><td class="single"><div id="mild" class="drag clone i">Mild</div></td></tr>
-							<tr><td class="single"><div id="mild-moderate" class="drag clone io">Mild-<br>moderate</div></td></tr>
+							<tr><td class="single"><div id="mild-moderate" class="drag clone io">Mild-<br />moderate</div></td></tr>
 							<tr><td class="single"><div id="moderate" class="drag clone o">Moderate</div></td></tr>
-							<tr><td class="single"><div id="moderate-severe" class="drag clone os">Moderate-<br>severe</div></td></tr>
+							<tr><td class="single"><div id="moderate-severe" class="drag clone os">Moderate-<br />severe</div></td></tr>
 							<tr><td class="single"><div id="severe" class="drag clone s">Severe</div></td></tr>
 							<tr><td class="trash" title="Trash" style="color:white; text-transform:uppercase; font-weight:bold; background-color:#6386BD">Trash</td></tr>
 						</tbody>
@@ -110,35 +110,35 @@
 				<div id="right">
 					<table id="table2" style="table-layout:fixed; width:870px"><!-- RIGHT TABLE -->
 						<colgroup>
-							<col style="width:40px"> 
-							<col style="width:80px">
-							<col style="width:70px; border-left-style:solid">
-							<col style="width:70px; border-left-style:double">
-							<col style="width:70px">
-							<col style="width:90px; border-style:none">
-							<col style="width:70px">
-							<col style="width:70px; border-right-style:double">
-							<col style="width:70px; border-right-style:solid">
-							<col style="width:70px">
-							<col style="width:172px">
+							<col style="width:40px" /> 
+							<col style="width:80px" />
+							<col style="width:70px; border-left-style:solid" />
+							<col style="width:70px; border-left-style:double" />
+							<col style="width:70px" />
+							<col style="width:90px; border-style:none" />
+							<col style="width:70px" />
+							<col style="width:70px; border-right-style:double" />
+							<col style="width:70px; border-right-style:solid" />
+							<col style="width:70px" />
+							<col style="width:172px" />
 						</colgroup>
 						
 						<tbody>
 							<tr>
 								<td class="mark blank trash" title="Apply severity to central and paracentral locations" >
 									<!-- if checked, clone severity to central/paracentral  -->
-									<input id="entirelevel" type="checkbox"><label for="entirelevel" style="font-variant:small-caps; font-size:medium">link</label>
+									<input id="entirelevel" type="checkbox" /><label for="entirelevel" style="font-variant:small-caps; font-size:medium">link</label>
 								</td>
-								<td class="mark dark trash" title="Broad-based disc bulge"><a>Broad-based<br>disc bulge</a></td>
-								<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br>narrowing</a></td>
-								<td class="mark dark trash" title="Right foraminal disc protrusion"><a>Right<br>foraminal</a></td>
-								<td class="mark dark trash" title="Right central disc protrusion"><a>Right<br>central</a></td>
+								<td class="mark dark trash" title="Broad-based disc bulge"><a>Broad-based<br />disc bulge</a></td>
+								<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br />narrowing</a></td>
+								<td class="mark dark trash" title="Right foraminal disc protrusion"><a>Right<br />foraminal</a></td>
+								<td class="mark dark trash" title="Right central disc protrusion"><a>Right<br />central</a></td>
 								<td class="mark dark trash" title="Central disc protrusion"><a>Central</a></td>
-								<td class="mark dark trash" title="Left central disc protrusion"><a>Left<br>central</a></td>
-								<td class="mark dark trash" title="Left foraminal disc protrusion"><a>Left<br>foraminal</a></td>
-								<td class="mark dark trash" title="Left neuroforaminal narrowing"><a>Left NF<br>narrowing</a></td>
-								<td class="mark dark trash" title="Spinal canal stenosis"><a>Spinal<br>stenosis</a></td>
-								<td class="mark dark trash" title="Other findings"><a>Other<br>findings</a></td>
+								<td class="mark dark trash" title="Left central disc protrusion"><a>Left<br />central</a></td>
+								<td class="mark dark trash" title="Left foraminal disc protrusion"><a>Left<br />foraminal</a></td>
+								<td class="mark dark trash" title="Left neuroforaminal narrowing"><a>Left NF<br />narrowing</a></td>
+								<td class="mark dark trash" title="Spinal canal stenosis"><a>Spinal<br />stenosis</a></td>
+								<td class="mark dark trash" title="Other findings"><a>Other<br />findings</a></td>
 							</tr>
 							<tr>
 								<td class="mark dark trash">L1-L2</td>
@@ -396,9 +396,9 @@
 								</td>
 							</tr>
 							<tr> <!-- 8/2/14 -->
-								<td colspan=3 class="mark blank trash"></td>
-								<td colspan=5 class="mark dark trash" style="font-variant:small-caps; font-size:medium">location of disc protrusion</td>
-								<td colspan=3 class="mark blank trash"></td>
+								<td colspan="3" class="mark blank trash"></td>
+								<td colspan="5" class="mark dark trash" style="font-variant:small-caps; font-size:medium">location of disc protrusion</td>
+								<td colspan="3" class="mark blank trash"></td>
 							</tr>
 						</tbody>
 					</table><!-- RIGHT TABLE -->
@@ -408,7 +408,7 @@
 			
 			<!-- PREVIEW PANE -->
 			<div id="preview" style="margin-top:15px; clear:both">
-				<div class="editable" id="report_textarea" contenteditable style="padding-top:5px; float:left">
+				<div class="editable" id="report_textarea" contenteditable="true" style="padding-top:5px; float:left">
 					An error has occurred.
 				</div>
 				
@@ -426,13 +426,13 @@
 								</button>
 							</td>
 							<td>
-								<input type="checkbox" id="conclusion" onclick="report_update()"><label for="conclusion">Generate <b>CONCLUSION:</b> sentence</label>
-									<br>
-								<input type="checkbox" id="talk-brackets" onClick="report_update()"><label for="talk-brackets">Add [brackets] for editing in TalkStation</label>
+								<input type="checkbox" id="conclusion" onclick="report_update()" /><label for="conclusion">Generate <b>CONCLUSION:</b> sentence</label>
+									<br />
+								<input type="checkbox" id="talk-brackets" onclick="report_update()" /><label for="talk-brackets">Add [brackets] for editing in TalkStation</label>
 							</td>
 						</tr>
 						<tr>
-							<td>Ctrl+C to copy</td>
+							<td colspan="3">Ctrl+C to copy</td>
 						</tr>
 					</table>
 				</div>
