added grades I-III anterolisthesis and retrolisthesis to "Other Findings". closes #22.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
 											<option value="20">mod</option>
 											<option value="21">sev</option>
 										</optgroup>
+										<optgroup label="Anterolisthesis">
+											<option value="22">I</option>
+											<option value="23">II</option>
+											<option value="24">III</option>
+										</optgroup>
+										<optgroup label="Retrolisthesis">
+											<option value="25">I</option>
+											<option value="26">II</option>
+											<option value="27">III</option>
+										</optgroup>
 									</select>
 								</td>
 							</tr>
@@ -238,6 +248,16 @@
 											<option value="19">mild</option>
 											<option value="20">mod</option>
 											<option value="21">sev</option>
+										</optgroup>
+										<optgroup label="Anterolisthesis">
+											<option value="22">I</option>
+											<option value="23">II</option>
+											<option value="24">III</option>
+										</optgroup>
+										<optgroup label="Retrolisthesis">
+											<option value="25">I</option>
+											<option value="26">II</option>
+											<option value="27">III</option>
 										</optgroup>
 									</select>
 								</td>
@@ -290,6 +310,16 @@
 											<option value="20">mod</option>
 											<option value="21">sev</option>
 										</optgroup>
+										<optgroup label="Anterolisthesis">
+											<option value="22">I</option>
+											<option value="23">II</option>
+											<option value="24">III</option>
+										</optgroup>
+										<optgroup label="Retrolisthesis">
+											<option value="25">I</option>
+											<option value="26">II</option>
+											<option value="27">III</option>
+										</optgroup>
 									</select>
 								</td>
 							</tr>
@@ -341,6 +371,16 @@
 											<option value="20">mod</option>
 											<option value="21">sev</option>
 										</optgroup>
+										<optgroup label="Anterolisthesis">
+											<option value="22">I</option>
+											<option value="23">II</option>
+											<option value="24">III</option>
+										</optgroup>
+										<optgroup label="Retrolisthesis">
+											<option value="25">I</option>
+											<option value="26">II</option>
+											<option value="27">III</option>
+										</optgroup>
 									</select>
 								</td>
 							</tr>
@@ -391,6 +431,16 @@
 											<option value="19">mild</option>
 											<option value="20">mod</option>
 											<option value="21">sev</option>
+										</optgroup>
+										<optgroup label="Anterolisthesis">
+											<option value="22">I</option>
+											<option value="23">II</option>
+											<option value="24">III</option>
+										</optgroup>
+										<optgroup label="Retrolisthesis">
+											<option value="25">I</option>
+											<option value="26">II</option>
+											<option value="27">III</option>
 										</optgroup>
 									</select>
 								</td>
