change "sev" to "severe" and enlarge multipleSelects. closes #18.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 				for (var i = 0; i < a.length; i++) {
 					$(a[i]).multipleSelect({		// initialize the 5 multipleSelects
 						multiple: true,
-						multipleWidth: 50,			// width of each checkbox + label
+						multipleWidth: 70,			// width of each checkbox + label
 						width: 170,					// width of entire row
-						maxHeight: 280,
+						maxHeight: 380,
 						selectAll: false,			// "Select All" checkbox row
 						placeholder: "None",		// what to display when no options are selected
 						minumimCountSelected: 99,	// [sic] when to display "x of y selected"
@@ -156,37 +156,37 @@
 										<optgroup label="Annular fissure">
 											<option value="1">mild</option>
 											<option value="2">mod</option>
-											<option value="3">sev</option>
+											<option value="3">severe</option>
 										</optgroup>
 										<optgroup label="Disc desiccation">
 											<option value="4">mild</option>
 											<option value="5">mod</option>
-											<option value="6">sev</option>
+											<option value="6">severe</option>
 										</optgroup>
 										<optgroup label="Disc space narrowing">
 											<option value="7">mild</option>
 											<option value="8">mod</option>
-											<option value="9">sev</option>
+											<option value="9">severe</option>
 										</optgroup>
 										<optgroup label="End-plate degenerative changes">
 											<option value="10">mild</option>
 											<option value="11">mod</option>
-											<option value="12">sev</option>
+											<option value="12">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Right">
 											<option value="13">mild</option>
 											<option value="14">mod</option>
-											<option value="15">sev</option>
+											<option value="15">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Left">
 											<option value="16">mild</option>
 											<option value="17">mod</option>
-											<option value="18">sev</option>
+											<option value="18">severe</option>
 										</optgroup>
 										<optgroup label="Ligamentum flavum thickening">
 											<option value="19">mild</option>
 											<option value="20">mod</option>
-											<option value="21">sev</option>
+											<option value="21">severe</option>
 										</optgroup>
 										<optgroup label="Anterolisthesis">
 											<option value="22">I</option>
@@ -217,37 +217,37 @@
 										<optgroup label="Annular fissure">
 											<option value="1">mild</option>
 											<option value="2">mod</option>
-											<option value="3">sev</option>
+											<option value="3">severe</option>
 										</optgroup>
 										<optgroup label="Disc desiccation">
 											<option value="4">mild</option>
 											<option value="5">mod</option>
-											<option value="6">sev</option>
+											<option value="6">severe</option>
 										</optgroup>
 										<optgroup label="Disc space narrowing">
 											<option value="7">mild</option>
 											<option value="8">mod</option>
-											<option value="9">sev</option>
+											<option value="9">severe</option>
 										</optgroup>
 										<optgroup label="End-plate degenerative changes">
 											<option value="10">mild</option>
 											<option value="11">mod</option>
-											<option value="12">sev</option>
+											<option value="12">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Right">
 											<option value="13">mild</option>
 											<option value="14">mod</option>
-											<option value="15">sev</option>
+											<option value="15">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Left">
 											<option value="16">mild</option>
 											<option value="17">mod</option>
-											<option value="18">sev</option>
+											<option value="18">severe</option>
 										</optgroup>
 										<optgroup label="Ligamentum flavum thickening">
 											<option value="19">mild</option>
 											<option value="20">mod</option>
-											<option value="21">sev</option>
+											<option value="21">severe</option>
 										</optgroup>
 										<optgroup label="Anterolisthesis">
 											<option value="22">I</option>
@@ -278,37 +278,37 @@
 										<optgroup label="Annular fissure">
 											<option value="1">mild</option>
 											<option value="2">mod</option>
-											<option value="3">sev</option>
+											<option value="3">severe</option>
 										</optgroup>
 										<optgroup label="Disc desiccation">
 											<option value="4">mild</option>
 											<option value="5">mod</option>
-											<option value="6">sev</option>
+											<option value="6">severe</option>
 										</optgroup>
 										<optgroup label="Disc space narrowing">
 											<option value="7">mild</option>
 											<option value="8">mod</option>
-											<option value="9">sev</option>
+											<option value="9">severe</option>
 										</optgroup>
 										<optgroup label="End-plate degenerative changes">
 											<option value="10">mild</option>
 											<option value="11">mod</option>
-											<option value="12">sev</option>
+											<option value="12">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Right">
 											<option value="13">mild</option>
 											<option value="14">mod</option>
-											<option value="15">sev</option>
+											<option value="15">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Left">
 											<option value="16">mild</option>
 											<option value="17">mod</option>
-											<option value="18">sev</option>
+											<option value="18">severe</option>
 										</optgroup>
 										<optgroup label="Ligamentum flavum thickening">
 											<option value="19">mild</option>
 											<option value="20">mod</option>
-											<option value="21">sev</option>
+											<option value="21">severe</option>
 										</optgroup>
 										<optgroup label="Anterolisthesis">
 											<option value="22">I</option>
@@ -339,37 +339,37 @@
 										<optgroup label="Annular fissure">
 											<option value="1">mild</option>
 											<option value="2">mod</option>
-											<option value="3">sev</option>
+											<option value="3">severe</option>
 										</optgroup>
 										<optgroup label="Disc desiccation">
 											<option value="4">mild</option>
 											<option value="5">mod</option>
-											<option value="6">sev</option>
+											<option value="6">severe</option>
 										</optgroup>
 										<optgroup label="Disc space narrowing">
 											<option value="7">mild</option>
 											<option value="8">mod</option>
-											<option value="9">sev</option>
+											<option value="9">severe</option>
 										</optgroup>
 										<optgroup label="End-plate degenerative changes">
 											<option value="10">mild</option>
 											<option value="11">mod</option>
-											<option value="12">sev</option>
+											<option value="12">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Right">
 											<option value="13">mild</option>
 											<option value="14">mod</option>
-											<option value="15">sev</option>
+											<option value="15">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Left">
 											<option value="16">mild</option>
 											<option value="17">mod</option>
-											<option value="18">sev</option>
+											<option value="18">severe</option>
 										</optgroup>
 										<optgroup label="Ligamentum flavum thickening">
 											<option value="19">mild</option>
 											<option value="20">mod</option>
-											<option value="21">sev</option>
+											<option value="21">severe</option>
 										</optgroup>
 										<optgroup label="Anterolisthesis">
 											<option value="22">I</option>
@@ -400,37 +400,37 @@
 										<optgroup label="Annular fissure">
 											<option value="1">mild</option>
 											<option value="2">mod</option>
-											<option value="3">sev</option>
+											<option value="3">severe</option>
 										</optgroup>
 										<optgroup label="Disc desiccation">
 											<option value="4">mild</option>
 											<option value="5">mod</option>
-											<option value="6">sev</option>
+											<option value="6">severe</option>
 										</optgroup>
 										<optgroup label="Disc space narrowing">
 											<option value="7">mild</option>
 											<option value="8">mod</option>
-											<option value="9">sev</option>
+											<option value="9">severe</option>
 										</optgroup>
 										<optgroup label="End-plate degenerative changes">
 											<option value="10">mild</option>
 											<option value="11">mod</option>
-											<option value="12">sev</option>
+											<option value="12">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Right">
 											<option value="13">mild</option>
 											<option value="14">mod</option>
-											<option value="15">sev</option>
+											<option value="15">severe</option>
 										</optgroup>
 										<optgroup label="Facet joint hypertrophy, Left">
 											<option value="16">mild</option>
 											<option value="17">mod</option>
-											<option value="18">sev</option>
+											<option value="18">severe</option>
 										</optgroup>
 										<optgroup label="Ligamentum flavum thickening">
 											<option value="19">mild</option>
 											<option value="20">mod</option>
-											<option value="21">sev</option>
+											<option value="21">severe</option>
 										</optgroup>
 										<optgroup label="Anterolisthesis">
 											<option value="22">I</option>
