pretty-print HTML, re-align left descriptor table, delete trash button. fixes #19.

--- a/index.html
+++ b/index.html
@@ -87,20 +87,32 @@
 	
 				<!-- left container (table with subjects) -->
 				<div id="left">
+					<br />
 					<table id="table1"><!-- LEFT TABLE -->
 						<colgroup>
 							<col style="width:80px" />
 						</colgroup>
 						<tbody>
-						<!--	td class="dark" for overwritable
-								td class="single" for non-overwritable -->
-							<tr><td class="single"><div id="bl" class="drag clone bl"><input type="text" value="Minimal" style="width:60px; vertical-align:bottom; text-align:center" id="bl_text" onkeyup="report_update()" /></div></td></tr>
-							<tr><td class="single"><div id="mild" class="drag clone i">Mild</div></td></tr>
-							<tr><td class="single"><div id="mild-moderate" class="drag clone io">Mild-<br />moderate</div></td></tr>
-							<tr><td class="single"><div id="moderate" class="drag clone o">Moderate</div></td></tr>
-							<tr><td class="single"><div id="moderate-severe" class="drag clone os">Moderate-<br />severe</div></td></tr>
-							<tr><td class="single"><div id="severe" class="drag clone s">Severe</div></td></tr>
-							<tr><td class="trash" title="Trash" style="color:white; text-transform:uppercase; font-weight:bold; background-color:#6386BD">Trash</td></tr>
+							<tr><td class="single">
+								<div id="bl" class="drag clone bl">
+									<input type="text" value="Minimal" style="width:60px; vertical-align:bottom; text-align:center" id="bl_text" onkeyup="report_update()" />
+								</div>
+							</td></tr>
+							<tr><td class="single">
+								<div id="mild" class="drag clone i">Mild</div>
+							</td></tr>
+							<tr><td class="single">
+								<div id="mild-moderate" class="drag clone io">Mild-<br />moderate</div>
+							</td></tr>
+							<tr><td class="single">
+								<div id="moderate" class="drag clone o">Moderate</div>
+							</td></tr>
+							<tr><td class="single">
+								<div id="moderate-severe" class="drag clone os">Moderate-<br />severe</div>
+							</td></tr>
+							<tr><td class="single">
+								<div id="severe" class="drag clone s">Severe</div>
+							</td></tr>
 						</tbody>
 					</table><!-- LEFT TABLE -->
 				</div><!-- left container -->
