random report feature

--- a/index.html
+++ b/index.html
@@ -490,6 +490,11 @@
 						</button>
 					</td>
 					<td>
+						<button id="randombtn" style="height:50px">
+						Random Report
+						</button>
+					</td>
+					<td>
 						<label><input type="checkbox" id="conclusion" />Generate <b>CONCLUSION:</b> sentence</label>
 							<br />
 						<label><input type="checkbox" id="talk-brackets" />Add [brackets] for editing in TalkStation</label>
