added "All levels" row with "Spondylosis"

--- a/index.html
+++ b/index.html
@@ -450,16 +450,20 @@
 								</select>
 							</td>
 						</tr>
-
-						<tr>
-							<td colspan="3" class="mark blank trash"></td>
+						<tr style="border-top-style:solid"> <!-- 8/2/14 -->
+							<td class ="mark dark trash" style="font-variant:small-caps">all<br />levels</td>
+							<td colspan="2" class="mark trash" style="text-align:left">
+								Spondylosis:<br />
+								<label><input type="checkbox" id="mild-spon" />Mild</label>
+								<label><input type="checkbox" id="mod-spon" />Mod</label>
+								<label><input type="checkbox" id="sev-spon" />Sev</label>
+							</td>
 							<td colspan="7" class="mark dark trash" style="font-variant:small-caps; font-size:medium">location of disc protrusion</td>
-							<td colspan="3" class="mark blank trash"></td>
+							<td colspan="3" class="mark trash"></td>
 						</tr>
 					</tbody>
 				</table><!-- RIGHT TABLE -->
 			</div><!-- right container -->
-
 		</div><!-- DRAG CONTAINER -->
 	</div>
 	<!-- /MAIN CONTAINER -->
