--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							<tr>
 								<td class="mark blank trash" title="Apply severity to central and paracentral locations" >
 									<!-- if checked, clone severity to central/paracentral  -->
-									<input id="entirelevel" type="checkbox" /><label for="entirelevel" style="font-variant:small-caps; font-size:medium">link</label>
+									<label style="font-variant:small-caps; font-size:medium"><input id="entirelevel" type="checkbox" />link</label>
 								</td>
 								<td class="mark dark trash" title="Broad-based disc bulge"><a>Broad-based<br />disc bulge</a></td>
 								<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br />narrowing</a></td>
@@ -488,9 +488,9 @@
 								</button>
 							</td>
 							<td>
-								<input type="checkbox" id="conclusion" onclick="report_update()" /><label for="conclusion">Generate <b>CONCLUSION:</b> sentence</label>
+								<label><input type="checkbox" id="conclusion" onclick="report_update()" />Generate <b>CONCLUSION:</b> sentence</label>
 									<br />
-								<input type="checkbox" id="talk-brackets" onclick="report_update()" /><label for="talk-brackets">Add [brackets] for editing in TalkStation</label>
+								<label><input type="checkbox" id="talk-brackets" onclick="report_update()" />Add [brackets] for editing in TalkStation</label>
 							</td>
 						</tr>
 						<tr>
