--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 		<script type="text/javascript">
             $(document).ready(function() {
                 // Colorbox
-				$('a.cb').colorbox({ opacity:0.5 });		// initialize colorbox for class "cb"
+				$('a.cb').colorbox({		// initialize colorbox for class "cb"
+					opacity: 0.5,
+					width: "750px",
+					height: "350px"
+				});
 				
 				// Multiple Select
 				var a = "#o1 #o2 #o3 #o4 #o5".split(' ');	// identify the 5 multipleSelects
