--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 	<!-- PREVIEW PANE -->
 	<div id="preview">
 		<!-- REPORT AREA -->
-		<div class="editable" id="report_textarea" contenteditable="true">
+		<div class="editable" id="reportTextarea" contenteditable="true">
 			An error has occurred.
 		</div>
 
