input select onclick

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<tbody>
 						<tr><td class="single">
 							<div id="bl" class="drag clone bl">
-								<input type="text" value="Minimal" style="width:60px; text-align:center" id="bl_text" class="bl_text_class" />
+								<input type="text" value="Minimal" style="width:60px; text-align:center" id="bl_text" class="bl_text_class" onclick="this.select()" />
 							</div>
 						</td></tr>
 						<tr><td class="single">
