--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-53017751-1', 'auto');
+		ga('require', 'displayfeatures');
 		ga('send', 'pageview');
 	</script>
 </head>
